<resources>
    <string name="app_name">My Application</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="c_l_i_c_k">C L I C K</string>
    <string name="classment">Classment</string>
    <string name="settings">Settings</string>
    <string name="logo">LOGO</string>
    <string name="training">Training</string>
    <string name="o">O</string>
    <string name="with_friends">With friends</string>
    <string name="online">Online</string>
    <string name="high_score">High Score</string>
    <string name="maestral_s_clicks">Maestral\'s clicks</string>
    <string name="rock">rock</string>
    <string name="_3">3</string>
    <string name="d_compte">Décompte</string>
    <string name="ready">READY</string>
    <string name="_countdown">3</string>
    <string name="on_click">On click</string>
    <string name="up_arrow">To the Top Arrow</string>
</resources>