<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond"
    tools:context=".MainActivity2">

<<<<<<< HEAD
</androidx.constraintlayout.widget.ConstraintLayout>
=======
    <Button
        android:id="@+id/button4"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="31dp"
        android:background="#282FC9"
        android:fontFamily="@font/righteous"
        android:text="@string/training"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="201dp"
        android:layout_height="54dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="26dp"
        android:background="#282FC9"
        android:fontFamily="@font/righteous"
        android:text="@string/with_friends"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="201dp"
        android:layout_height="54dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="104dp"
        android:background="#282FC9"
        android:fontFamily="@font/righteous"
        android:text="@string/online"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="117dp"
        android:fontFamily="@font/righteous"
        android:text="@string/high_score"
        android:textColor="#FFB800"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="111dp"
        android:fontFamily="@font/righteous"
        android:text="24"
        android:textAlignment="center"
        android:textColor="#FFB800"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="181dp"
        android:layout_height="77dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/righteous"
        android:text="@string/maestral_s_clicks"
        android:textAlignment="center"
        android:textColor="#282FC9"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="27dp"
        android:contentDescription="@string/rock"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/the_rock_cut" />


</android.support.constraint.ConstraintLayout>
>>>>>>> 141c10b... new resources
